actualizacion pagina de inicio cliente